; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/binutils/gas/extr_dwarf2dbg.c_relax_inc_line_addr.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/binutils/gas/extr_dwarf2dbg.c_relax_inc_line_addr.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i64, i32*, i32*, i32 }

@O_subtract = common dso_local global i32 0, align 4
@DWARF2_LINE_MIN_INSN_LENGTH = common dso_local global i32 0, align 4
@rs_dwarf2dbg = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32, i32*, i32*)* @relax_inc_line_addr to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @relax_inc_line_addr(i32 %0, i32* %1, i32* %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i32*, align 8
  %6 = alloca i32*, align 8
  %7 = alloca %struct.TYPE_3__, align 8
  %8 = alloca i32, align 4
  store i32 %0, i32* %4, align 4
  store i32* %1, i32** %5, align 8
  store i32* %2, i32** %6, align 8
  %9 = load i32, i32* @O_subtract, align 4
  %10 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %7, i32 0, i32 3
  store i32 %9, i32* %10, align 8
  %11 = load i32*, i32** %5, align 8
  %12 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %7, i32 0, i32 2
  store i32* %11, i32** %12, align 8
  %13 = load i32*, i32** %6, align 8
  %14 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %7, i32 0, i32 1
  store i32* %13, i32** %14, align 8
  %15 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %7, i32 0, i32 0
  store i64 0, i64* %15, align 8
  %16 = load i32, i32* %4, align 4
  %17 = load i32, i32* @DWARF2_LINE_MIN_INSN_LENGTH, align 4
  %18 = sub nsw i32 0, %17
  %19 = call i32 @size_inc_line_addr(i32 %16, i32 %18)
  store i32 %19, i32* %8, align 4
  %20 = load i32, i32* @rs_dwarf2dbg, align 4
  %21 = load i32, i32* %8, align 4
  %22 = load i32, i32* %8, align 4
  %23 = call i32 @make_expr_symbol(%struct.TYPE_3__* %7)
  %24 = load i32, i32* %4, align 4
  %25 = call i32 @frag_var(i32 %20, i32 %21, i32 %22, i32 1, i32 %23, i32 %24, i32* null)
  ret void
}

declare dso_local i32 @size_inc_line_addr(i32, i32) #1

declare dso_local i32 @frag_var(i32, i32, i32, i32, i32, i32, i32*) #1

declare dso_local i32 @make_expr_symbol(%struct.TYPE_3__*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
